 * Deprecate use of unidecode within form builder field names (Michael van Tellingen, LB (Ben Johnston))
 * Improve error feedback when editing a page with a missing model class (Andy Babic)
 * Change Wagtail tabs implementation to only allow slug-formatted tab identifiers, reducing false positives from security audits (Matt Westcott)
 * Fix: Support IPv6 domain (Alex Gleason, Coen van der Kamp)
 * Fix: Ensure link to add a new user works when no users are visible in the users list (LB (Ben Johnston))
 * Fix: `AbstractEmailForm` saved submission fields are now aligned with the email content fields, `form.cleaned_data` will be used instead of `form.fields` (Haydn Greatnews)
 * Fix: Removed ARIA `role="table"` from TableBlock output (Thibaud Colas)
 * Fix: Set Cache-Control header to prevent page preview responses from being cached (Tomas Walch)
 * Fix: Accept unicode characters in slugs on the "copy page" form (François Poulain)
 * Fix: Remove top padding when `FieldRowPanel` is used inside a `MultiFieldPanel` (Jérôme Lebleu)
 * Fix: Add Wagtail User Bar back to page previews and ensure moderation actions are available (Coen van der Kamp)
 * Fix: Resolve issue where queryset annotations were lost (e.g. `.annotate_score()`) when using specific models in page query (Dan Bentley)
 * Fix: Prevent date/time picker from losing an hour on losing focus when 12-hour times are in use (Jacob Topp-Mugglestone)
 * Fix: Strip out HTML tags from `RichTextField` & `RichTextBlock` search index content (Timothy Bautista)
 * Fix: Avoid using null on string `Site.site_name` blank values to avoid different values for no name (Coen van der Kamp)
 * Fix: Fix deprecation warnings on Elasticsearch 7 (Yngve Høiseth)
 * Fix: Remove use of Node.forEach for IE 11 compatibility in admin menu items (Thibaud Colas)
 * Fix: Fix incorrect method name in SiteMiddleware deprecation warning (LB (Ben Johnston))
 * Fix: `wagtail.contrib.sitemaps` no longer depends on SiteMiddleware (Matt Westcott)