@@ -39,6 +39,7 @@ $color-orange: #e9b04d;
 $color-orange-dark: #bb5b03;
 $color-green: #189370;
 $color-green-dark: #157b57;
+$color-green-darker: #105d42; // White has AAA compatibility when this is used in bgd.
 $color-salmon: #f37e77;
 $color-salmon-light: #fcf2f2;
 $color-white: #fff;
