@@ -338,7 +338,6 @@ $(function() {
     });
 });
 
-
 // =============================================================================
 // Wagtail global module, mainly useful for debugging.
 // =============================================================================
