@@ -24,7 +24,7 @@
         <div class="explorer__wrapper" data-explorer-menu></div>
     </aside>
 
-    <main class="content-wrapper" role="main">
+    <main class="content-wrapper" role="main" id="main">
         <div class="content">
             {# Always show messages div so it can be appended to by JS #}
             <div class="messages">
