@@ -33,6 +33,8 @@
 
     {% block js %}{% endblock %}
 
+    <a class="skiplink button" href="#main" data-skiplink>{% trans 'Skip to main content' %}</a>
+
     <div class="wrapper">
        {% block furniture %}{% endblock %}
     </div>
